--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-menu center">
   <h1><%= link_to 'ФУДКОРНЕР', root_path %></h1>
   <ul>
-    <li><%= link_to 'МЕНЮ', ("#{categories_path}#{"/ossetian-pies"}") %></li>
+    <li><%= link_to 'МЕНЮ', ("#{categories_path}#{"/burgers"}") %></li>
     <li><%= link_to 'ДОСТАВКА', delivery_path %></li>
     <li><%= link_to 'О НАС', about_path %></li>
     <li><%= link_to 'КОНТАКТЫ', contacts_path %></li>
