--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<% provide(:description, 'Фудкорнер - стрит-фуд кафе на Первомайской, 81. Основные позиции меню: бургеры, шаурма, вок и осетинские пироги. Все блюда готовятся при вас на открытой кухне исключительно из местных продуктов.') %>
+<div class="info center">
 <div class="home-menu center">
   <h1><%= link_to 'ФУДКОРНЕР', root_path %></h1>
   <ul>
