--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="<%= yield(:description) %>" />
+  <meta name="google-site-verification" content="zyuMhVOXccCnLfP2eftBLHCzQ9aGJlQVcdKkdNawUic" />
   <title><%= full_title(yield(:title)) %></title>
   <link href='https://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -25,5 +26,6 @@
     <% end %>
     <%= yield %>
   </div>
+  <%= render 'shared/metrika'%>
 </body>
 </html>
