--- a/app/views/shared/_nav_menu.html.erb
+++ b/app/views/shared/_nav_menu.html.erb
@@ -38,7 +38,7 @@
   <%= link_to("#{root_path}#{"menu/desserts"}") do %>
     <li>
       <%= image_tag 'dessert.png' %>
-      <p>десертты</p>
+      <p>десерты</p>
     </li>
   <% end %>
   <%= link_to("#{root_path}#{"menu/drinks"}") do %>
