--- a/app/views/shared/_nav_menu.html.erb
+++ b/app/views/shared/_nav_menu.html.erb
@@ -20,7 +20,7 @@
     <%= link_to("#{root_path}#{"menu/ossetian-pies"}") do %>
     <li>
       <%= image_tag 'baker.png' %>
-      <p>осетинские пироги</p>
+      <p>пироги</p>
     </li>
   <% end %>
   <%= link_to("#{root_path}#{"menu/soups"}") do %>
