--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.text_area :description, class: 'form-control', placeholder: 'Описание' %>
   </div>
   <div class="form-group">
-    <%= f.text_field :price, class: 'form-control', required: true, placeholder: 'Цена' %>
+    <%= f.text_field :price, class: 'form-control', placeholder: 'Цена' %>
   </div>
   <div class="form-group">
     <%= f.attachinary_file_field :image, class: 'form-control' %>
