--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:description, 'Фудкорнер - стрит-фуд кафе на Первомайской, 81. Основные позиции меню: бургеры, шаурма, вок и осетинские пироги. Все блюда готовятся при вас на открытой кухне исключительно из местных продуктов.') %>
 <div class="info center">
 <div class="home-menu center">
-  <h1><%= link_to 'ФУДКОРНЕР', root_path %></h1>
+  <img src="http://res.cloudinary.com/dcfpmc4xp/image/upload/q_100/v1472774822/%D1%84%D1%83%D0%B4-%D0%B1%D0%B5%D0%BB_ydijd5.png" />
   <ul>
     <li><%= link_to 'МЕНЮ', ("#{categories_path}#{"/burgers"}") %></li>
     <li><%= link_to 'ДОСТАВКА', delivery_path %></li>
