--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="nav center">
-  <h3><%= link_to 'ФУДКОРНЕР', root_path %></h3>
+  <p><img src="http://res.cloudinary.com/dcfpmc4xp/image/upload/q_100/v1472774824/%D1%84%D1%83%D0%B4-%D1%87%D0%B5%D1%80%D0%BD_omcbni.png" /></p>
   <ul>
     <li><%= link_to 'МЕНЮ', ("#{categories_path}#{"/burgers"}") %></li>
     <li><%= link_to 'ДОСТАВКА', delivery_path %></li>
