--- a/app/views/shared/_nav_menu.html.erb
+++ b/app/views/shared/_nav_menu.html.erb
@@ -1,4 +1,11 @@
 <ul class="nav-menu center">
+  <%= link_to("#{root_path}#{"menu/novelty"}") do %>
+    <li>
+      <%= image_tag 'new.png' %>
+      <p>новинки</p>
+    </li>
+  <% end %>
+
   <%= link_to("#{root_path}#{"menu/burgers"}") do %>
     <li>
       <%= image_tag 'burger.png' %>
