--- a/app/assets/stylesheets/style.css.scss.erb
+++ b/app/assets/stylesheets/style.css.scss.erb
@@ -598,6 +598,17 @@ li {
 .middle {
   vertical-align: middle;
 }
+.red a {
+  color: #FF0000;
+}
+.red a:hover {
+  color: #FF3333;
+  text-decoration: none;
+}
+.red a:focus {
+  color: #FF3333;
+  text-decoration: none;
+}
 
 @media (min-width: 960px) and (max-width: 980px) {
   .entry-container {
