--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,8 +4,8 @@
     <p><img src="http://res.cloudinary.com/dcfpmc4xp/image/upload/q_100/v1472774824/%D1%84%D1%83%D0%B4-%D1%87%D0%B5%D1%80%D0%BD_omcbni.png" /></p>
   <% end %>
   <ul>
+    <li class="red"><%= link_to 'ДОСТАВКА', "http://foodcorner.smartomato.ru", target: "_blank" %></li>
     <li><%= link_to 'МЕНЮ', ("#{categories_path}#{"/burgers"}") %></li>
-    <li><%= link_to 'ДОСТАВКА', delivery_path %></li>
     <li><%= link_to 'О НАС', about_path %></li>
     <li><%= link_to 'КОНТАКТЫ', contacts_path %></li>
   </ul>
